--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
     <div class="reveal">
       <div class="slides">
         <section>
-          <h2><strike>ng2</strike> Angular adoption<br>from an early stage</h2>
+          <h2><strike>Angular2</strike> Angular adoption<br>from an early stage</h2>
         </section>
         <section>
-          <div class="meter"><span style="width: calc(100% * 0 / 9)"></span></div>
           <div class="col">
             <img src="images/Wherewolf_Wolf_Icon.png">
           </div>
@@ -42,6 +41,7 @@
             </h2>
             <p>Queenstown</p>
             <p>Indemity Forms &amp; Liability Waivers</p>
+            <p>Adventure Tourism</p>
           </div>
         </section>
 
@@ -54,14 +54,79 @@
         </section>
 
         <section>
+          <div class="col">
+            <img src="images/officeuseonly.png">
+          </div>
+          <div class="col">
+            <h2>For Office<br>Use Only</h2>
+            <p>Manifests &amp; Trips</p>
+            <p>Weight &amp; Balance</p>
+            <p>Demographics</p>
+            <p>Frontend for Digital Marketing tools</p>
+          </div>
+        </section>
+
+        <section>
           <img src="images/infrastructure.png">
         </section>
 
         <section>
-          <img src="images/angular.png">
+          <div class="col">
+            <img src="images/angular.png">
+          </div>
+          <div class="col">
+            <p class="fragment">Angular</p>
+            <p class="fragment">Angular 1.x</p>
+            <p class="fragment">Angular 2</p>
+            <p class="fragment">Angular</p>
+          </div>
+          <div class="fragment">
+            <img src="images/angularcommits.png">
+          </div>
         </section>
 
+        <section>
+          <img src="images/broken-eggs.jpg">
+        </section>
 
+        <section>
+          <img src="images/broken-obvious.jpg">
+        </section>
+
+        <section>
+          <img src="images/broken-midflight.jpg">
+        </section>
+
+        <section>
+          <img src="images/broken-frustrated.jpg">
+        </section>
+
+        <section>
+          <h2>Breakages include:</h2>
+          <p class="fragment">BSOD / WSOD / Stackless</p>
+          <p class="fragment">Method/Property Rename<br>`sed -ie s/oldMethod/newMethod/g foo.js`</p>
+          <p class="fragment">Deprecation</p>
+        </section>
+
+        <section>
+          <h2>From which we learnt</h2>
+        </section>
+
+        <section>
+          <img src="images/loud.jpeg">
+        </section>
+
+        <section>
+          <img src="images/alwaysbetesting.jpg">
+        </section>
+
+        <section>
+          <img src="images/rtfm.png">
+        </section>
+
+        <section>
+          <img src="images/readthesource.gif">
+        </section>
 
         <section>
           Slide 2
