useless commit message

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <section>
           <div class="col">
             <img src="images/angular.png">
+            <p><center>Angular</center></p>
           </div>
           <div class="col">
             <p class="fragment">Angular</p>
@@ -90,11 +91,11 @@
         </section>
 
         <section>
-          <img src="images/broken-obvious.jpg">
+          <img src="images/broken-midflight.jpg">
         </section>
 
         <section>
-          <img src="images/broken-midflight.jpg">
+          <img src="images/broken-obvious.jpg">
         </section>
 
         <section>
@@ -103,9 +104,14 @@
 
         <section>
           <h2>Breakages include:</h2>
-          <p class="fragment">BSOD / WSOD / Stackless</p>
+          <p class="fragment">BlSOD / WSOD / Stackless</p>
           <p class="fragment">Method/Property Rename<br>`sed -ie s/oldMethod/newMethod/g foo.js`</p>
+          <p class="fragment">Method returns different results</p>
           <p class="fragment">Deprecation</p>
+        </section>
+
+        <section>
+          <img src="images/revolt.jpg">
         </section>
 
         <section>
@@ -118,6 +124,7 @@
 
         <section>
           <img src="images/alwaysbetesting.jpg">
+          <h3>(Responsibly)</h3>
         </section>
 
         <section>
@@ -125,7 +132,19 @@
         </section>
 
         <section>
-          <img src="images/readthesource.gif">
+          <img src="images/readthesource.jpg">
+        </section>
+
+        <section>
+          <ul>
+            <h3>Turn on all errors</h3>
+            <h3>Testing (responsibly)</h3>
+            <h3>Read smart things</h3>
+          </ul>
+        </section>
+
+        <section>
+          <img src="images/betterthanbefore.jpg">
         </section>
 
         <section>
