--- a/index.html
+++ b/index.html
@@ -31,17 +31,20 @@
           <h2><strike>Angular2</strike> Angular adoption<br>from an early stage</h2>
         </section>
         <section>
+          <img src="images/notready.jpg">
+        </section>
+        <section>
+          <h2>
+            Wherewolf
+          </h2>
           <div class="col">
             <img src="images/Wherewolf_Wolf_Icon.png">
           </div>
           <div class="col">
-            <br>
-            <h2>
-              Wherewolf
-            </h2>
             <p>Queenstown</p>
             <p>Indemity Forms &amp; Liability Waivers</p>
             <p>Adventure Tourism</p>
+            <p>ExpressJS / Postgres / jQuery Mobile / Angular</p>
           </div>
         </section>
 
@@ -58,11 +61,13 @@
             <img src="images/officeuseonly.png">
           </div>
           <div class="col">
-            <h2>For Office<br>Use Only</h2>
-            <p>Manifests &amp; Trips</p>
-            <p>Weight &amp; Balance</p>
-            <p>Demographics</p>
-            <p>Frontend for Digital Marketing tools</p>
+            <h4>For Office<br>Use Only</h4>
+            <ul>
+            <li>Manifests &amp; Trips with<br>assigned staff / equip.</li>
+            <li>Weight &amp; Balance</li>
+            <li>Demographics and analysis</li>
+            <li>Frontend for Digital Marketing tools (email / SMS)</li>
+            </ul>
           </div>
         </section>
 
@@ -73,9 +78,9 @@
         <section>
           <div class="col">
             <img src="images/angular.png">
-            <p><center>Angular</center></p>
           </div>
           <div class="col">
+            <br>
             <p class="fragment">Angular</p>
             <p class="fragment">Angular 1.x</p>
             <p class="fragment">Angular 2</p>
@@ -87,7 +92,42 @@
         </section>
 
         <section>
+          <h2>Up to date<br>vs<br>out of date</h2>
+        </section>
+
+        <section>
+          <h2>Evergreen Software</h2>
+          <div class="fragment">
+            <ul>
+              <li>Chrome / Firefox / Edge</li>
+              <li>Adobe Thingymajig</li>
+              <li>Debian Unattended Upgrades</li>
+            </ul>
+          </div>
+        </section>
+
+        <section>
+          <h2>Reluctance to update</h2>
+        </section>
+
+        <section>
           <img src="images/broken-eggs.jpg">
+        </section>
+
+        <section>
+          <h2>SemVer</h2>
+          <h4>Semantic Versioning</h4>
+          <img src="images/semver.png">
+        </section>
+
+        <section>
+          <h2>SemVer aims to<br>provide predictability*<h2>
+          <div class="fragment">
+            * unless you're in alpha
+          </div>
+          <div class="fragment">
+            or Google
+          </div>
         </section>
 
         <section>
@@ -119,6 +159,7 @@
         </section>
 
         <section>
+        ini_set('display_errors', 'Off');
           <img src="images/loud.jpeg">
         </section>
 
@@ -136,10 +177,20 @@
         </section>
 
         <section>
+          <img src="images/readyforlaunch.jpg">
+        </section>
+
+        <section>
           <ul>
             <h3>Turn on all errors</h3>
             <h3>Testing (responsibly)</h3>
             <h3>Read smart things</h3>
+            <ul>
+              <li>Manual</li>
+              <li>Source</li>
+              <li>ChangeLog</li>
+            </ul>
+            <h3>Angular is (now) ready</h3>
           </ul>
         </section>
 
@@ -148,16 +199,24 @@
         </section>
 
         <section>
-          Slide 2
+          <h2>Wherewolf is hiring</h2>
           <div class="col">
             <img src="images/Wherewolf_Wolf_Icon.png">
           </div>
           <div class="col">
-            <p>Low barrier to entry</p>
-            <p>LAMP Stack</p>
-            <p>A lot of blog posts for n00bs who don't RTFM</p>
-            <p>"Tries" to follow ANSI SQL</p>
-            <p>Very forgiving aka "good enough for most"</p>
+            <p>Queenstown</p>
+            <p>Skifields, biking, lakes, mountains, rivers etc.</p>
+            <p>Semi-sane tech stack</p>
+            <p>jobs@wherewolf.co.nz</p>
+          </div>
+        </section>
+
+        <section>
+          <div class="col">
+            <img src="images/angular.png">
+          </div>
+          <div class="col">
+            <img src="images/Wherewolf_Wolf_Icon.png">
           </div>
         </section>
 
