--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
   <body>
     <div class="reveal">
       <div class="slides">
+
         <section>
           <h2><strike>Angular2</strike> Angular adoption<br>from an early stage</h2>
+          <br><br><br>
+          <p><center>github.com/wulfsolter</center></p>
         </section>
+
         <section>
           <img src="images/notready.jpg">
         </section>
+
         <section>
           <h2>
             Wherewolf
@@ -100,7 +105,7 @@
           <div class="fragment">
             <ul>
               <li>Chrome / Firefox / Edge</li>
-              <li>Adobe Thingymajig</li>
+              <li>Adobe Thingymajigs</li>
               <li>Debian Unattended Upgrades</li>
             </ul>
           </div>
@@ -182,7 +187,7 @@
 
         <section>
           <ul>
-            <h3>Turn on all errors</h3>
+            <h3>Turn on all errors (NewRelic + Emails)</h3>
             <h3>Testing (responsibly)</h3>
             <h3>Read smart things</h3>
             <ul>
